--- a/depot/test/fixtures/line_items.yml
+++ b/depot/test/fixtures/line_items.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  product: ruby
+  product: one
   order: one
 
 two:
-  product: ruby
-  cart: one
+  product: two
+  cart: two
