--- a/depot/Gemfile
+++ b/depot/Gemfile
@@ -30,6 +30,9 @@ gem 'jbuilder', '~> 2.5'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
+# Figaro was written to make it easy to securely configure Rails applications.
+gem 'figaro', '~> 1.1.1'
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
